fix too light background

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,7 +8,7 @@ $color-medium: #333333;
 
 
 body{
-    background-color: #FFFFFF;
+    background-color: #FCFCFC;
     color: #222222;
 }
 #main{
